# sidis_analysis_suite

./: .gitignore  CMakeLists.txt  README.md  getFall2019runs.csh  skimFall2019runs.csh  skimFall2019runs.ipynb
analysis/: CMakeLists.txt  calcCharge.cpp  makeGeneratorPlots.cpp  makeKinematicPlots.cpp  makeRatioBinned.cpp  makeRatioBinned3D.cpp  makeRatioBinned3D_old.cpp  makeRatioBinned_new.cpp  makeRatioBinned_sym.cpp  makeThetaPhi.cpp  makeXsRatioBinned.cpp  mergeEnergy.cpp  studyRuns.cpp  studyZ.cpp
bash_scripts/: check_selection_plots.sh  do_acc_matching.sh  do_data.sh  do_gemc.sh  do_generator.sh  do_kaon_analysis.sh  do_kaons.sh  do_rho.sh  do_rho_10.2.sh  do_rho_10.4.sh  do_rho_10.6.sh  do_rho_analysis.sh  do_skim_outbending.sh  get_charge.sh  get_counts.sh  make_Mx_plots.sh  make_acceptance_maps.sh  make_corrections.sh  make_fiducial_plots.sh  make_final_kin_plots.sh  make_gemc_selection.sh  make_kinematic_plots.sh  make_ratio_plots.sh  make_ratios.sh  make_selection_plots.sh  make_selection_plots_par.sh  run_overnight.sh  submit_cut_sensitivity.py  submit_cut_sensitivity_mc_corr.py  submit_rotations.py
bash_scripts/rga/: calculate_cuts.sh
classes/: CLAS.cpp  CMakeLists.txt  LinkDef.h  LinkDef_e.h  LinkDef_gen_e.h  LinkDef_gen_pi.h  LinkDef_pi.h  SIDISatBAND_auxiliary.cpp  analyzer.cpp  clashit.cpp  correctionTools.cpp  e_pid.cpp  electron.cpp  genElectron.cpp  genPion.cpp  makeHists.C  pion.cpp  reader.cpp
corrections/: .smoothCorrections.cpp.swp  CMakeLists.txt  calcCorrections.cpp  calcCorrections_4D.cpp  evalCorrectionVals.cpp  fitCorrection.cpp  fitWeight.cpp  smoothCorrections.cpp  smoothCorrections_old.cpp  testCorrections.cpp
cutAnalysis/: CMakeLists.txt  calcCorrectionsChain.cpp  calcSFCuts.cpp  calcVertexCut.cpp  checkDetectorCuts.cpp  cutSensitivity.cpp  cut_sensitivity.C  doAccMatching.cpp  fiducialStudy.cpp  kinematicPlots.cpp  makeAcceptanceMap.cpp  makeDetectorPlots.cpp  makeKinematicPlots.cpp  makeMxDep.cpp  makeThetaPhiPlots.cpp  plotAcceptanceRegions.cpp
data/: BANDcutValues.csv  SF_fits.root  SF_fits_rga.root  acceptanceMap.root
data/acceptance_map/: acceptanceMap_10.2.root  acceptanceMap_10.4.root  acceptanceMap_10.6.root  acceptanceMap_allE.root  acceptanceMap_allE_final.root  acceptanceMap_allE_loose.root  acceptanceMap_allE_mid.root  acceptanceMap_allE_none.root
data/acceptance_matching/: matchCut2D.root  matchCut2D_map.root  matchCut3D.root  matchCutK2Pi.root  matchCutK2Pi_map.root  matchCutKaons.root  matchCutPi2K.root  matchCutPi2K_map.root
data/correctionFiles/: corrections_kaons.root  corrections_kaons_10.2.root  corrections_kaons_10.2.root.root
data/cutValueFiles/: BANDcutValues.csv
data/exp_data/: Cornell77_xB_0.24_Q2_2.0.csv  Cornell77_xB_0.5_Q2_4.0.csv  HERMES2000.csv  JLAB2012_r_Table11.csv  cornell_1977_q2_xb.txt  jlab_2012_q2_w2.txt  jlab_2012_q2_xb.txt  jlab_2012_q2_z.txt
data/runInfo/: piCounts_10.2.txt  piCounts_10.4.txt  piCounts_10.6.txt  runCharge_10.2.txt  runCharge_10.4.txt  runCharge_10.6.txt  runCharge_out.txt  runCharge_out_etrig.txt
data/runLists/: good_runs_10-4_pos.txt  good_runs_10-4_pos_ind.txt  rga_nsidis_runs_10-6.txt
gemc/: RNDMSTATUS  nodeScript.sh  recon_gemc.py  recon_gemc_tagged.py  rgb_spring2019.gcard  run_clasdis.sh  submit_gemc.py  submit_gemc_tagged.py
include/: SIDISatBAND_auxiliary.h  analyzer.h  clashit.h  constants.h  correctionTools.h  csv_reader.h  cut_values.h  e_pid.h  electron.h  genElectron.h  genPion.h  makeHists.h  pion.h  reader.h
kaonAnalysis/: CMakeLists.txt  calcDataRatio.cpp  calcKaonCuts.C  calcKaonCuts.cpp  calcKaonCutsP.cpp  doAccMatchingKaon.cpp  evalCorrectionVals.cpp  fitKaonCorrection.cpp  kaonSys.cpp  makeKaonPlots.cpp  mcKaonCorrections.cpp  studyCorrections.cpp
plotting/: CMakeLists.txt  acceptanceMaps.ipynb  acceptanceMaps_gpt.ipynb  convertHist2Csv.C  kaon_AN_plots.ipynb  makeTables.ipynb  plot2dKinematics.ipynb  plotAcceptanceMap.py  plotAcceptanceMatching.cpp  plotAcceptanceMatching.py  plotBeta.py  plotCharge.ipynb  plotCharge.py  plotComps.py  plotCorrectionFits.py  plotCorrectionFits_kaons.py  plotCorrections.py  plotCuts.py  plotDataSim.py  plotDetector.cpp  plotDetectorC12.cpp  plotDoubleRatio.ipynb  plotEdge.py  plotEnergy.py  plotFiducials.cpp  plotFiducials.py  plotFits.py  plotFixed.ipynb  plotFixedZ.py  plotFragBinned.py  plotFragBinned3d.py  plotKCutFits.py  plotKaonFits.py  plotKinematics.cpp  plotMC.py  plotMcFits.cpp  plotMxDep.py  plotOutbending.py  plotRatioBinned3D.ipynb  plotRatios.py  (+11 more)
rhoAnalysis/: CMakeLists.txt  analyzeSidebands.cpp  bacSub.cpp  computeNorms.cpp  computeNorms3D.cpp  computeNormsSym.cpp  makeRhoKinematicPlots.cpp  mcRhoCorrections.cpp  mergeChunks.cpp  plotDependence.cpp  plotXS.cpp  rotateRho.cpp  rotateRho_old.cpp  rotateRho_sym.cpp  studyBack.cpp  studyWeights.cpp
skimmers/: CMakeLists.txt  cutSensitivitySkim.cpp  final_rho_skimmer.cpp  final_skimmer.cpp  gen_skimmer.cpp  gen_skimmer_upd.cpp  getCharge.cpp  inclusive_stats.cpp  kaon_skimmer.cpp  reskim.cpp  rho_skimmer.cpp  sidis_skimmer_upd.cpp  skimmer_plots.cpp  test_skimmer.cpp  tight_reskim.cpp
