# find source and header files, set paths, includes...
SET(LIBNAME "clashit_tree")
FILE(GLOB SRCS clashit.cpp)

FILE(GLOB HEADERS ${CMAKE_SOURCE_DIR}/include/clashit.h)
set(INCLUDES ${ROOT_INCLUDE_DIR} "${CMAKE_SOURCE_DIR}/include/" )
INCLUDE_DIRECTORIES(${INCLUDES})

# create root dictionary
SET(LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/LinkDef.h)
SET(DICTIONARY ${LIBNAME}Dict.cpp)
ROOT_GENERATE_DICTIONARY(G__${LIBNAME} ${INCLUDES}/clashit.h MODULE ${LIBNAME} LINKDEF ${LINKDEF})
ROOT_GENERATE_DICTIONARY(G__vectors TLorentzVector.h MODULE vectors_tree LINKDEF ${LINKDEF})
#LIST(APPEND SRCS ${DICTIONARY})

# build the library
ADD_LIBRARY(${LIBNAME} SHARED ${SRCS} G__${LIBNAME} G__vectors ${ROOT_LIBRARIES})
TARGET_LINK_LIBRARIES(${LIBNAME} ${ROOT_LIBRARIES} )
#INSTALL ( TARGETS ${LIBNAME} DESTINATION "${CMAKE_SOURCE_DIR}/lib")

#INSTALL ( FILES ${CMAKE_CURRENT_BINARY_DIR}/${LIBNAME}Dict_rdict.pcm DESTINATION ${CMAKE_SOURCE_DIR}/lib)
