# find source and header files, set paths, includes...
SET(LIBNAME "clashit_tree")
FILE(GLOB SRCS electron.cpp)

FILE(GLOB HEADERS ${CMAKE_SOURCE_DIR}/include/electron.h)
set(INCLUDES ${ROOT_INCLUDE_DIR} "${CMAKE_SOURCE_DIR}/include/"  )
include_directories(${CLAS12ROOT}/Clas12Banks ${CLAS12ROOT}/Clas12Root ${INCLUDES} ${LIBRARIES})

# create root dictionary
SET(LINKDEF ${CMAKE_CURRENT_SOURCE_DIR}/LinkDef.h)
SET(DICTIONARY ${LIBNAME}Dict.cpp)
ROOT_GENERATE_DICTIONARY(G__${LIBNAME} ${INCLUDES}/electron.h MODULE ${LIBNAME} LINKDEF ${LINKDEF})
ROOT_GENERATE_DICTIONARY(G__vectors TLorentzVector.h MODULE vectors_tree LINKDEF ${LINKDEF})
#LIST(APPEND SRCS ${DICTIONARY})

# build the library
ADD_LIBRARY(${LIBNAME} SHARED ${SRCS} G__${LIBNAME} G__vectors ${ROOT_LIBRARIES}  )
TARGET_LINK_LIBRARIES(${LIBNAME} ${ROOT_LIBRARIES} -lEG PkgConfig::hipo4 -L${CLAS12ROOT}/lib -lClas12Banks -lClas12Root   )
#INSTALL ( TARGETS ${LIBNAME} DESTINATION "${CMAKE_SOURCE_DIR}/lib")

#INSTALL ( FILES ${CMAKE_CURRENT_BINARY_DIR}/${LIBNAME}Dict_rdict.pcm DESTINATION ${CMAKE_SOURCE_DIR}/lib)
